feat(admin): add ProtectedRoute for admin approvals

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/master-ball.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PokeMMO Compendium</title>
 
     <!-- Google tag (gtag.js) -->
     <script
