--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-P747QEVXFL"
     ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-P747QEVXFL");
-    </script>
+    <script async src="/ga-init.js"></script>
   </head>
 
   <body>
