--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-P747QEVXFL"
     ></script>
-    <script async src="/ga-init.js"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        window.dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-P747QEVXFL");
+    </script>
   </head>
 
   <body>
