feat(dev): add Firebase emulator support

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-P747QEVXFL"
+      src="https://www.googletagmanager.com/gtag/js?id=G-JZV5F4Q3SG"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
-        window.dataLayer.push(arguments);
+        dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-P747QEVXFL");
+
+      gtag("config", "G-JZV5F4Q3SG");
     </script>
   </head>
 
